Criado elemento footer com id rodape.

--- a/style.css
+++ b/style.css
@@ -30,3 +30,8 @@ li{
 #licoes_a_aprender li{
     background-color: cornflowerblue ;   
 }
+
+#rodape{
+    background-color: crimson;
+    text-align: center;
+}
