--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 .fundos_secoes {
   background-color: rgb(20 , 33 , 61);
-  color: rgb(255 , 255 , 255);
+  color: white
   padding: 50px;
 }
 
