--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ footer {
   padding-left: 20px;
   color: black;
   font-family: Work Sans, sans-serif;
-  background-color:rgb(114 , 63 , 97);
+  background-color: rgb(114 , 63 , 97);
   width: 100%;
   height: 50px;
 }
@@ -146,7 +146,7 @@ td {
 
 .titles {
   font-size: 20px;
-  font-weight: 800px;
+  font-weight: 800;
   line-height: 30px;
   padding-bottom: 0;
   color: rgb(166 , 87 , 119);
@@ -172,7 +172,7 @@ td {
 
 .external-link {
   color: blue;
-  font-weight: bolder;
+  font-weight: 800;
 }
 
 #meu-aprendizado {
