--- a/style.css
+++ b/style.css
@@ -59,13 +59,18 @@ td {
   margin-bottom: 15px;
   background-color: darkgray;
   text-align: center;
+  letter-spacing: 3px;
 }
 
-#aprendizado {
+.lado-esquerdo {
   font-size: 20px;
   margin-left: 15px;
   margin-right: 15px;
   margin-bottom: 20px;
+}
+
+.lado-direito {
+  font-size: 18px;
 }
 
 #minha_foto {
