--- a/style.css
+++ b/style.css
@@ -14,12 +14,14 @@ body {
 #cabecalho {
   border-bottom: 1px solid;
   border-color: rgb( 1 , 112 , 72 );
+  background-color: white;
   padding-top: 1%;
   position: fixed;
   text-align: center;
   text-transform: uppercase;
   top: 0;
   width: 100%;
+  z-index: 2;
 }
 
 #titulo {
@@ -41,6 +43,8 @@ body {
 #conteudo-principal .secao {
   position: relative;
   float: left;
+  margin-left: 30px;
+  z-index: 1;
 }
 
 #conteudo-principal .secao img {
@@ -50,7 +54,7 @@ body {
   left: 0;
 }
 
-#conteudo-principal .secao .lado-direito, 
+#conteudo-principal .secao .lado-direito,
 #conteudo-principal .secao .lado-esquerdo {
   background: linear-gradient(rgb( 1 , 110 , 71 ) , rgb( 0 , 163 , 103 ));
   border-radius: 30px;
@@ -75,7 +79,7 @@ body {
   top: 200px;
 }
 
-#conteudo-principal .arame-base:after, 
+#conteudo-principal .arame-base:after,
 #conteudo-principal .arame-base:before {
   content: '';
   background-color: black;
@@ -113,19 +117,21 @@ body {
   margin-left: 3px;
 }
 
-#conteudo-principal .lado-esquerdo.text-artigo, 
+#conteudo-principal .lado-esquerdo .text-artigo,
 #conteudo-principal .lado-direito .text-artigo {
   text-align: justify;
 }
 
 #conteudo-principal .secao-listas {
   clear: both;
+  margin-left: 15px;
 }
 
 #conteudo-principal .secao-listas .box-lista {
   background-color: rgb( 242 , 242 , 242 );
   display: inline-block;
   margin-top: 20px;
+  margin-left: 10px;
   max-width: 500px;
 }
 
@@ -133,6 +139,7 @@ body {
   font-weight: 300;
   line-height: 5px;
   font-size: 20px;
+  padding-left: 10px;
 }
 
 #conteudo-principal .secao-listas .box-lista .list li {
@@ -165,8 +172,25 @@ body {
   border-color: rgb( 67 , 66 , 66 );
 }
 
-#licoes_a_aprender li > a{
+#licoes_a_aprender li > a {
   color: rgb( 67 , 66 , 66 );
+}
+
+#rodape {
+  background-color: rgb( 0 , 163 , 103 );
+  bottom: 0;
+  color: white;
+  width: 100%;
+  position: fixed;
+  text-align: center;
+}
+
+#rodape h3 {
+  font-size: 13px;
+  font-weight: 300;
+}
+#rodape h3 span {
+  font-weight: bold;
 }
 
 .titulo-article {
