--- a/style.css
+++ b/style.css
@@ -20,9 +20,10 @@ header ul a {
 }
 
 img {
-  border-radius: 10%;
-  width: 200px;
-  z-index: 0;
+  border-radius: 100% 120% 20% 20%;
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
 }
 
 table , th , td {
@@ -36,6 +37,7 @@ table , th , td {
 #article {
   background-color: rgb(109 , 110 ,	128);
   display: inline-block;
+  border-radius: 1%;
   padding: 20px 80px;
   text-align: center;
   margin-left: 15%;
@@ -45,6 +47,7 @@ table , th , td {
 #aside {
   background-color:rgb(196 , 176 , 176);
   padding: 20px 80px;
+  border-radius: 1%;
   text-align: center;
   margin-right: 15%;
   float: right;
@@ -67,44 +70,64 @@ table , th , td {
 #rodape {
   background-color: blue;
   color: aliceblue;
+  padding: 10px;
 }
 
-#table{
-  padding: 20px;
+#table {
+  padding: 30px 300px;
 }
 
-#tabela {
-  display: inline-block;
-  margin: 40px 0 10px 200px;
+#table table {
+  border-collapse: collapse;
+  width: 100%;
 }
 
 .container {
   display: inline-block;
-  /*width: 70%;*/
   padding: 100px 100px 0;
-}
-
-.container-aprendizados {
-  margin-left: 30px;
 }
 
 .lado-esquerdo {
   background-color: rgb(196 , 176 , 176);
   padding: 20px 80px;
   display: inline-block;
-  margin-left: 15%;
+  /*margin-left: 15%;*/
   width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 1%;
 }
 
 .lado-direito {
   background-color: rgb(109 , 110 ,	128);
   padding: 20px 80px;
-  margin-right: 15%;
+  /*margin-right: 15%;*/
   float: right;
   width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 1%;
 }
 
 .imagem {
-  position: absolute;
-  margin: 30px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  clear: none;
+}
+
+.lado-esquerdo:hover , .lado-esquerdo:active {
+  font-size: 150%;
+}
+
+.lado-direito:hover , .lado-direito:active {
+  font-size: 150%;
+}
+
+#article:hover , #article:active {
+  font-size: 150%;
+}
+
+#aside:hover , #aside:active {
+  font-size: 150%;
 }
