corrgindo problemas de semantica

--- a/style.css
+++ b/style.css
@@ -183,21 +183,21 @@ body {
   width: 80%;
 }
 
-
-#tabela tr:nth-child(1) th {
+#tabela tr:nth-child( 1 ) th {
   border-bottom: 1px solid;
   border-color: rgb( 1 , 110 , 71 );
   padding: 10px;
   color: rgb( 1 , 110 , 71 );
   font-weight: 500;
 }
-#tabela tr:nth-child(2) {
+
+#tabela tr:nth-child( 2 ) {
   background-color: rgba( 1 , 110 , 71 , 0.2 );
 }
-#tabela tr:nth-child(2) td {
+
+#tabela tr:nth-child( 2 ) td {
   padding: 10px;
 }
-
 
 #rodape {
   background-color: rgb( 0 , 163 , 103 );
@@ -214,6 +214,7 @@ body {
   line-height: 10px;
   display: inline-block;
 }
+
 #rodape h3 span {
   font-weight: bold;
 }
@@ -223,12 +224,14 @@ body {
   margin-top: 10px;
   display: inline-block;
 }
+
 #rodape .redes-sociais a {
   color: white;
   font-size: 20px;
   margin-left: 10px;
 }
-#rodape .redes-sociais a:hover i {
+
+#rodape .redes-sociais a:hover em {
   color: black;
 }
 
