--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   background-color: rgb(89 , 238 , 43);
   position: fixed;
   width: 100%;
+  text-align: center;
 }
 #titulo {
   color: brown;
