--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   background-color: rgb(89 , 238 , 43);
   position: fixed;
   width: 100%;
-  text-align: center;
+  margin-top: 0px;
 }
 #titulo {
   color: brown;
