--- a/style.css
+++ b/style.css
@@ -1,46 +1,67 @@
 header{
-background-color: #0fa36b;
-margin-bottom: 10px;
+    background-color: #0fa36b;
+    margin-bottom: 10px;
 }
 header h1{
-margin-top: 0px;
-font-family: Montserrat;
-text-align: center;
-padding-bottom: 5px;
-border-bottom: 10px double #0aab53;
+    margin-top: 0px;
+    font-family: Montserrat;
+    text-align: center;
+    padding-bottom: 5px;
+    border-bottom: 10px double #0aab53;
 }
 nav a{
-list-style-type: none;
-display: inline-block;
-margin: 0px 15px 10px 15px;
-padding: 2px 2px;
-border: 2px solid #088c7b;
+    list-style-type: none;
+    display: inline-block;
+    margin: 0px 15px 10px 15px;
+    padding: 2px 2px;
+    border: 2px solid #088c7b;
 }
 body{
-background-color: rgb(253, 251, 251)
+    background-color: rgb(253, 251, 251)
 }
 img{
-border-radius: 40px;
-border: 2px solid #088c7b;
-width: 150px;
-margin-right: 100%;
+    border-radius: 40px;
+    border: 2px solid #088c7b;
+    width: 150px;
+    margin-right: 60%;
 }
 article{
-float: left;
-width: 60%;
+    margin:10px 0px 60px 0px;
+    float: left;
+    width: 50%;
 }
 aside{
-float: right;
-width: 40%;
+    margin:10px 0px 10px 0px;
+    float: right;
+    width: 40%;
 }
 section{
-border: 10px 20px 10px 20px;
-width: 100%;
+    clear: both;
+    border: 10px 20px 10px 20px;
+    width: 100%;
 }
-ul section{
-display: inline-block;
+section h2{
+    font-family: Montserrat;
 }
-ol section{
-display: inline-block;
+section ul{
+    display: inline-block;
 }
-    
+section ol{
+    display: inline-block;
+}
+/* Posição da tabela */
+table{
+    float: right;
+    border: 0px 100px 0px 0px;
+}
+/* Estilização da tabela */
+table, th, td{
+    border: 1.5px solid #0aab53;
+}
+/* Estilização do rodapé */
+footer h2{
+    font-family: Montserrat;
+}
+footer{
+    background-color: #0aab53;
+}
