--- a/style.css
+++ b/style.css
@@ -1,67 +1,81 @@
-header{
-    background-color: #0fa36b;
+header {
+    background-color: rgb(15 ,163 ,107);
     margin-bottom: 10px;
 }
-header h1{
-    margin-top: 0px;
-    font-family: Montserrat;
+
+header h1 {
+    margin-top: 0;
+    font-family: Montserrat, sans-serif;
     text-align: center;
     padding-bottom: 5px;
-    border-bottom: 10px double #0aab53;
+    border-bottom: 10px double rgb(10 ,171 ,83);
 }
-nav a{
+
+nav a {
     list-style-type: none;
     display: inline-block;
-    margin: 0px 15px 10px 15px;
-    padding: 2px 2px;
-    border: 2px solid #088c7b;
+    margin: 0 15px 10px;
+    padding: 2px;
+    border: 2px solid rgb(8 ,140 ,123);
 }
-body{
-    background-color: rgb(253, 251, 251)
+
+body {
+    background-color: rgb(253 ,251 ,251);
 }
-img{
+
+img {
     border-radius: 40px;
-    border: 2px solid #088c7b;
+    border: 2px solid rgb(8 ,140 ,123);
     width: 150px;
     margin-right: 60%;
 }
-article{
-    margin:10px 0px 60px 0px;
+
+article {
+    margin: 10px 0px 60px;
     float: left;
     width: 50%;
 }
-aside{
-    margin:10px 0px 10px 0px;
+
+aside {
+    margin: 10px 0px 10px;
     float: right;
     width: 40%;
 }
-section{
+
+section {
     clear: both;
     border: 10px 20px 10px 20px;
     width: 100%;
 }
-section h2{
-    font-family: Montserrat;
+
+section h2 {
+    font-family: Montserrat, sans-serif;
 }
-section ul{
+
+section ul {
     display: inline-block;
 }
-section ol{
+
+section ol {
     display: inline-block;
 }
+
 /* Posição da tabela */
-table{
+table {
     float: right;
-    border: 0px 100px 0px 0px;
+    border: 0 100px 0 0;
 }
+
 /* Estilização da tabela */
-table, th, td{
-    border: 1.5px solid #0aab53;
+table ,th ,td {
+    border: 1.5px solid rgb(10 ,171 ,83);
 }
+
 /* Estilização do rodapé */
-footer h2{
-    font-family: Montserrat;
+footer h2 {
+    font-family: Montserrat, sans-serif;
 }
-footer{
-    background-color: #0aab53;
+
+footer {
+    background-color: rgb(10 ,171 ,83);
 }
