--- a/style.css
+++ b/style.css
@@ -1,83 +1,95 @@
-body{
-   background-color: rgb(253, 251, 251);
-   margin:0;
-   font-family: Montserrat;
+body{ 
+    background-color: rgb(253 , 251 , 251);
+    margin: 0;
+    font-family: Montserrat, sans-serif;
 }
-#cabecalho{ position: fixed;
+
+#cabecalho{ 
+    position: fixed;
     top:0;
     width: 1366px;
     height: 160px;
-    background-color: rgb(15,162,107);
-    color: white; 
+    background-color: rgb(15 , 162 , 107);
+    color: white;
 }
-#cabecalho h1{
+
+#cabecalho h1{ 
     font-size: 50px;
     margin-left: 550px;
     margin-top: 49px
 }
 
-#apresentacao{
+#apresentacao{ 
     margin-top: -139px;
     margin-left: 90px;
     text-align: center;
     width: 168px;
 }
-#apresentacao h2{
-    margin:0;
+
+#apresentacao h2{ 
+    margin: 0;
 }
-#apresentacao p{
-    margin:-5px;
+
+#apresentacao p{ 
+    margin: -5px;
 }
-#minha_foto{
+
+#minha_foto{ 
     border-radius: 100px;
     height: 100px;
 }
 
-main{margin-top: 160px;}
+main{ 
+    margin-top: 160px;
+}
 
-#licoes{
+#licoes{ 
     width: 70%;
     margin: 0 auto;
     line-height: 2em;
     padding-top: 5px;
 }
-#licoes_aprendidas{
+
+#licoes_aprendidas{ 
     width: 40%;
     display: inline-block;
     margin-right: 15px;
 }
 
-#licoes_a_aprender{
+#licoes_a_aprender{ 
     width: 40%;
     display: inline-block;
     margin-left: 15px;
 }
-#textos{
+
+#textos{ 
     width: 70%;
     margin-left: auto;
     margin-right: auto;
     padding-top: 25px;
 }
-.lado-esquerdo{
-    
+
+.lado-esquerdo{ 
     width: 70%;
     margin-right: 15px;
     vertical-align: top;
     display: inline-block;
 }
-.lado-direito{
-    
+
+.lado-direito{ 
     width: 20%;
     margin-left: 15px;
-   display: inline-block;
+    display: inline-block;
 }
-.icones{
+
+.icones{ 
     width: 50px;
     border-radius: 50px;
-    margin: 3x;
+    margin: 3px;
 }
-#conteiner-icones{
-    width:50px;
+
+#conteiner-icones{ 
+    width: 50px;
     margin-top: -128px;
     margin-left: 218px;
 }
