--- a/style.css
+++ b/style.css
@@ -20,17 +20,17 @@ body {
   position: relative;
   float: left;
   border-width: 2px;
-  width: 300px;
-  height: 700px;
+  width: 200px;
+  height: 100px;
 
 }
 
 .lado-esquerdo {
   position: relative;
-  float: left;
+  float: right;
   border-width:2px;
   width:auto;
   height: auto;
-  left:300px;
+  left:100px;
 
 }
