--- a/style.css
+++ b/style.css
@@ -2,20 +2,16 @@ body{
     background-color: rgb(253, 251, 251);
     font-family: 'Merriweather', Georgia, serif;
 }
+
 #cabecalho{
-    top:0px
-}
-#barra{
+    top:0;
     position: fixed;
-    background-color: rgb(222, 184, 135);
     width: 100%;
     text-align: center;
+    display: block;
+    background: rgb(125,219,118);
+    background: radial-gradient(circle, rgba(125,219,118,1) 8%, rgba(120,244,105,1) 50%, rgba(233,255,232,0.938813025210084) 77%, rgba(118,255,99,1) 100%);
 }
-.colchete{
-    color:red;
-    text-align: center;
-}
-
 h1{
     text-align: center;
     font-size: 60px;
@@ -26,36 +22,58 @@ h1{
 nav{
     text-align: center;
     font-size: large;
-    
 }
 .menusuperior{
-    display: inline;
     margin: 50px;
 }
+
 a:link{
     text-decoration: none;
 }
 a:hover{
-    border-bottom: 5px dotted red;
+    border-bottom: 5px dotted white;
 }
 #minha_foto{
-    border-radius: 25%;
-    display: block;
-    margin-left: auto;
-    margin-right:auto;
-    height: 350px;
-    border-top: 500px;
+    border-radius: 75%;
+    height:300px;
 }
-
 .menusuperior{
     display:inline;
 }
-
+p{
+    font-family: sans-serif;
+}
+#article{
+    position: relative;
+}
+#lado-esquerdo{
+    position: inherit;
+    float: left;
+    width:60%;
+    margin-right: 50px;
+    margin-left: 50px;
+    border: 10px dotted green;
+    padding-left: 20px;
+    padding-right:20px;
+    text-align: justify;
+}
+#lado-direito{
+    position: inherit;
+    float: right;
+    width: 20%;
+    margin-right: 50px;
+    border: 10px dotted green;
+    padding-left: 20px;
+    padding-right:20px;
+    text-align: justify;
+    
+}
 footer{
     background-color: rgb(222, 184, 135);
     width: 100%;
     text-align: center;
-    color: LightGoldenRodYellow;
+    background: rgb(125,219,118);
+    background: radial-gradient(circle, rgba(125,219,118,1) 8%, rgba(120,244,105,1) 50%, rgba(233,255,232,0.938813025210084) 77%, rgba(118,255,99,1) 100%);
 }
 li a{
     color: LightGoldenRodYellow;
@@ -63,6 +81,12 @@ li a{
 }
 
 table, th, td{
-    border: 4px solid red;
+    border: 4px solid green;
 
+}
+
+h2{
+    background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
