--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body{
     width: 100%;
     text-align: center;
     display: block;
-    background: rgb(125,219,118);
-    background: radial-gradient(circle, rgba(125,219,118,1) 8%, rgba(120,244,105,1) 50%, rgba(233,255,232,0.938813025210084) 77%, rgba(118,255,99,1) 100%);
+    z-index: 1;
+   background-color:  rgb(102, 51, 0);
 }
 h1{
     text-align: center;
@@ -47,33 +47,40 @@ p{
     position: relative;
 }
 #lado-esquerdo{
-    position: inherit;
-    float: left;
     width:60%;
     margin-right: 50px;
     margin-left: 50px;
-    border: 10px dotted green;
+    border: 10px dotted brown;
     padding-left: 20px;
     padding-right:20px;
     text-align: justify;
+    position: absolute;
+    float: left;
+    top:350px;
+    
 }
 #lado-direito{
-    position: inherit;
-    float: right;
     width: 20%;
     margin-right: 50px;
-    border: 10px dotted green;
+    border: 10px dotted brown;
     padding-left: 20px;
     padding-right:20px;
     text-align: justify;
-    
+    position: absolute;
+    top:350px;
+    right:50px;
+}
+img{
+    position: relative;
+    top:160px;
+    right:350px;
+
 }
 footer{
     background-color: rgb(222, 184, 135);
     width: 100%;
     text-align: center;
-    background: rgb(125,219,118);
-    background: radial-gradient(circle, rgba(125,219,118,1) 8%, rgba(120,244,105,1) 50%, rgba(233,255,232,0.938813025210084) 77%, rgba(118,255,99,1) 100%);
+    background: rgb(102, 51, 0);
 }
 li a{
     color: LightGoldenRodYellow;
@@ -81,7 +88,7 @@ li a{
 }
 
 table, th, td{
-    border: 4px solid green;
+    border: 4px solid brown;
 
 }
 
