--- a/style.css
+++ b/style.css
@@ -17,21 +17,16 @@ body {
 }
 
 .lado-direito {
-  position: relative;
-  float: left;
+  float: right;
   border-width: 2px;
   width: 200px;
-  height: 100px;
-
 }
 
 .lado-esquerdo {
-  position: relative;
-  float: right;
+  float: left;
   border-width: 2px;
-  width: auto;
+  width: 300px;
   height: auto;
-  left: 100px;
-
+  
 }
 
