--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@ body {
   padding: 10px;
   position: fixed;
   text-align: center;
-  top: 0px;
+  top: 0;
   width: 100%;
   font-weight: 600;
 }
+
 h1 {
   margin-top: 30px;
   margin-bottom: 20px;
@@ -34,6 +35,7 @@ nav li {
 
 #perfil {
   display: inline-block;
+  text-align: center;
 }
 
 table {
@@ -50,10 +52,6 @@ td {
 
 main {
   display: inline;
-}
-
-#perfil {
-    text-align: center;
 }
 
 img {
@@ -110,5 +108,5 @@ footer {
 }
 
 * {
-  margin: 0px;
+  margin: 0;
 }
