--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
   color: white;
   top: 0;
   z-index: 1;
-  margin: 0px 0px 50px 0px;
 }
 
 #titulo {
@@ -50,7 +49,8 @@ ul {
 h2 {
   margin: auto;
   padding: 10px;
-  border: 0;
+  border-top: 1px solid rgb(222 , 222 , 222);
+  border-bottom: 1px solid rgb(222 , 222 , 222);
 }
 
 main {
