--- a/style.css
+++ b/style.css
@@ -44,11 +44,13 @@ body {
 .nav-item a:hover {
   transition: 0.4s;
   color: white;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .nav-item a {
   text-decoration: none;
   color: black;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 #cabecalho {
@@ -61,7 +63,7 @@ body {
   width: 200px;
   margin: 0 auto;
   border-radius: 50%;
-  border: 2px solid rgb(11, 167, 32);
+  border: 4px solid rgb(11, 167, 32);
   margin-top: 150px;
   margin-bottom: 10px;
 }
@@ -72,16 +74,35 @@ body {
 }
 
 #container{
-    
+    display: block;
+    height: 300px;
+    border: 1px solid black;
 }
 
 .lado-esquerdo{
+    text-align: center;
+    border-radius: 15px;
+    background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+    display: block;
+    border: 2px solid black;
+    float: left;
+    width: 50%;
+    height: 300px;
 }
 
 .lado-direito{
+    text-align: center;
+    border-radius: 15px;
+    background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+    border: 2px solid black;
+    display: block;
+    float: right;
+    width: 49.5%;
+    height: 300px;
 }
 
 #listas{
+    clear: both;
 }
 
 #rodape {
