--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   padding-top: 2.4rem;
   padding-bottom: 3.2rem;
   font-family: 'Press Start 2P', cursive;
+  line-height: 1.5rem;
 }
 
 #lista_licoes {
