--- a/style.css
+++ b/style.css
@@ -58,12 +58,16 @@ body {
   background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
 }
 
+#foto-bg{
+  background-color: rgba(0, 0, 0, 0.164);
+}
+
 #minha_foto {
   display: block;
   width: 200px;
   margin: 0 auto;
   border-radius: 50%;
-  border: 4px solid rgb(11, 167, 32);
+  border: 1px solid rgb(0, 0, 0);
   margin-top: 150px;
   margin-bottom: 10px;
 }
@@ -76,37 +80,68 @@ body {
 #container{
     display: block;
     height: 300px;
-    border: 1px solid black;
 }
 
 .lado-esquerdo{
     text-align: center;
-    border-radius: 15px;
     background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
     display: block;
-    border: 2px solid black;
     float: left;
     width: 50%;
     height: 300px;
+    line-height: 300px;
+    color: white;
+}
+
+.lado-esquerdo p{
+  line-height: 1.5;
+  display: inline-block;
+  vertical-align: center;
 }
 
 .lado-direito{
     text-align: center;
-    border-radius: 15px;
     background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
-    border: 2px solid black;
     display: block;
     float: right;
     width: 49.5%;
     height: 300px;
+    line-height: 300px;
+    color: white;
+}
+
+.lado-direito p{
+  line-height: 1.5;
+  display: inline-block;
+  vertical-align: center;
 }
 
 #listas{
     clear: both;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+    background-color: rgba(0, 0, 0, 0.164);
+
+}
+
+#licoes_aprendidas{
+  margin-top: 10px;
+  color: green;
+  font-size: 25px;
+  text-align: center;
+}
+
+#licoes_a_aprender{
+  margin-top: 10px;
+  color: green;
+  font-size: 25px;
+  text-align: center;
 }
 
 #rodape {
   background-color: rgba(0, 0, 0, 0.521);
+  clear: both;
 }
 
 .navegation-foot{
