Ultimo requisito: acerto

--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ table {
   border: 1px solid black;
   margin: 20px 30px 30px;
   border-collapse: collapse;
+  font: outline;
+  line-height: 1.2;
 }
 
 th {
