--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
     background-color: rgb(253 , 251 , 251);
         background-position: center;
-    margin-left: 50px;
+        margin-left: 50px;
 }
 
 #cabecalho {
         position: fixed;
-    top: 0;
-    font-family: 'Indie Flower', cursive;
+        top: 0;
+    font-family: Indie Flower , cursive;
     font-size: 30px;
 }
 
@@ -20,9 +20,9 @@ body {
 #headNav {
     float: right;
         position: absolute;
-    width: 100%;
-    bottom: 120px;
-    margin-left: 100px;
+        width: 100%;
+        bottom: 120px;
+        margin-left: 100px;
 }
 
 #main {
@@ -37,5 +37,5 @@ body {
 footer {
     background-color: black;
     color: white;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Courier New , Courier, monospace;
 }
