--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  color: black;
 }
 
 body {
@@ -11,9 +12,10 @@ body {
 #titulo {
   color: red;
   text-align: center;
+  top: 0;
 }
 
-#profile-pic {
+#minha_foto {
   border-radius: 50%;
   width: 200px;
 }
@@ -43,10 +45,12 @@ header {
   align-items: center;
   margin-left: 100px;
   letter-spacing: normal;
+  font-size: medium;
 }
 
 p {
   width: 50%;
+  font-size: medium;
 }
 
 table {
