--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
   top: 0;
 }
 
+#rodape {
+  color: red;
+  text-align: center;
+}
+
 #minha_foto {
   border-radius: 50%;
   width: 200px;
@@ -51,6 +56,7 @@ header {
 p {
   width: 50%;
   font-size: medium;
+  letter-spacing: medium;
 }
 
 table {
