--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@
 body {
   background-color: rgb(253 , 251 , 251);
 }
+#cabecalho {
+    top: 0;
+}
 
 #titulo {
   color: red;
   text-align: center;
-  top: 0;
+
 }
 
 #rodape {
