--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   font-family: sans-serif;
   color: black;
+  letter-spacing: normal;
 }
 
 body {
@@ -16,7 +17,6 @@ body {
 #titulo {
   color: red;
   text-align: center;
-
 }
 
 #rodape {
